2005-02-17  Gary Cramblitt (PhantomsDad)
        * Remove festival/ and festivalcs/ plugins from source tree.  AFAIK, these plugins don't work
          and nobody is using them.  And these are confusing packagers who think we have a build
          dependency on Festival and Speech Tools libraries. Use festivalint/.

2005-02-15  Gary Cramblitt (PhantomsDad)
        * Translations now working.
        * Include a copy of kdelibs/interfaces/kspeech in compat/ dir.  This permits distribution
          and compilation of KTTS for KDE less than 3.4.
        * Support for Italian voices.  Download from
          http://www.csrf.pd.cnr.it/TTS/It-FESTIVAL-download.htm.
          or http://mirko.lilik.it/Italian-FESTIVAL.zip

2005-02-05  Gary Cramblitt (PhantomsDad)
        * Version bumped to 0.3.0.
        * Russian Festival voice added to voices file.  Download voice from
          http://nshmyrev.narod.ru/festival/festival.html.  Must have Festival 1.95 beta or later.
          Untar to festival/lib/voices/russian/ directory.  Encoding must be one of the
          single-byte cryllics, such as KOI8-R.
        * Ability to load/save Talker Chooser and XML Transformer configurations.
        * Some bug fixes related to Filters.

2005-01-24  Gary Cramblitt (PhantomsDad)
        * Add Talker Chooser Filter.
        * Add option on Audio tab to preserve generated audio files by copying to user-specified
          directory.

2005-01-22  Gary Cramblitt (PhantomsDad)
        * Allow filtering of notifications.  (only setText and appendText are currently filtered.)
        * Fix bug.  Synchronous filters not being run.

2005-01-21  Gary Cramblitt (PhantomsDad)
        * Sentence Boundary Detector plugin now active.  This means that SSML is parsed into
          sentences and therefore can be rewound/advanced by sentence.  It also means that
          KTTS no longer crashes (taking KDE and X11 with it) on large HTML/SSML files.